tests/neg/unsafe-dollar-in-name-2.scala
//> using options -language:experimental.safe

object Foo$ // error

class `Bar$` // error
